<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="button_find_representatives">Find My Representatives</string>
    <string name="button_upcoming_elections">Upcoming Elections</string>
    <string name="app_logo_description">App Logo</string>

    <!-- Representative Fragment -->
    <string name="textView_representative_search_header">Representative Search</string>
    <string name="editText_address_line_1">Address Line 1</string>
    <string name="editText_address_line_2">Address Line 2</string>
    <string name="editText_city">City</string>
    <string name="editText_zipCode">Zip</string>
    <string name="button_useMyLocation">Use My Location</string>
    <string name="textView_myRepresentatives">My Representatives</string>
    <string name="representative_photo_description">Representative Photo</string>
    <string name="icon_facebook_description">Facebook Icon</string>
    <string name="icon_twitter_description">Twitter Icon</string>
    <string name="icon_www_description">WWW Icon</string>

    <!-- Elections Fragment -->
    <string name="textView_upcoming_elections">Upcoming Elections</string>
    <string name="textView_saved_elections">Saved Elections</string>

    <!-- Voter Info Fragment -->
    <string name="textView_election_information_title">Election Information</string>
    <string name="textView_voting_locations">Voting Locations</string>
    <string name="textView_ballot_information">Ballot Information</string>
    <string name="button_follow_election">Follow Election</string>
    <string name="button_unfollow_election">Unfollow Election</string>

    <!-- Error Message -->
    <string name="error">Error</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">Location permission denied!</string>
    <string name="error_parse_location">Error while parsing your location, please try again later!</string>


</resources>
