<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/representative_search_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/search_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_representative_search_header"
                style="@style/HeaderText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/address_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/editText_address_line_1"
                android:inputType="textPostalAddress"
                android:text="@={viewmodel.addressLine1}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title" />

            <EditText
                android:id="@+id/address_line_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:autofillHints=""
                android:hint="@string/editText_address_line_2"
                android:inputType="textPostalAddress"
                android:text="@={viewmodel.addressLine2}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_1" />

            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/editText_city"
                android:inputType="textPostalAddress"
                android:text="@={viewmodel.city}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/state"
                app:layout_constraintTop_toBottomOf="@id/address_line_2" />

            <Spinner
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autofillHints=""
                android:inputType="textPostalAddress"
                android:entries="@array/states"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/city"
                app:layout_constraintBottom_toBottomOf="@id/city"/>

            <EditText
                android:id="@+id/zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/editText_zipCode"
                android:text="@={viewmodel.zipCode}"
                android:inputType="number"
                android:maxLength="5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/city"
                app:layout_constraintTop_toBottomOf="@id/city" />

            <Button
                android:id="@+id/button_search"
                android:text="@string/button_find_representatives"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/primaryButton"
                app:layout_constraintTop_toBottomOf="@id/zip" />

            <Button
                android:id="@+id/button_use_my_location"
                android:text="@string/button_useMyLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/primaryButton"
                app:layout_constraintTop_toBottomOf="@id/button_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/representative_title"
            android:text="@string/textView_myRepresentatives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_search_area" />

        <!-- TODO: Add visual styling and content -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representative_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/representative_title"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>