<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/ballot_logo"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/upcoming_elections_button"
            android:src="@drawable/ballot_logo"
            android:contentDescription="@string/app_logo_description" />

        <Button
            android:id="@+id/upcoming_elections_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_upcoming_elections"
            style="@style/primaryButton"
            app:layout_constraintBottom_toTopOf="@id/find_my_representatives_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/find_my_representatives_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_find_representatives"
            style="@style/primaryButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>