<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- TODO: Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            app:title="@{viewmodel.election.name}"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TODO: Add visual styling -->
        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="election_date"
            android:text="@{viewmodel.election.electionDay.toString()}" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderText2"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            android:text="@string/textView_election_information_title"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            android:text="@string/textView_voting_locations"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <!-- TODO: Add click binding to open web URL -->
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            android:text="@string/textView_ballot_information"
            app:layout_constraintStart_toStartOf="@id/election_date" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:layout_constraintStart_toStartOf="@id/election_date"
            tools:text="state_correspondence_header"/>

        <!-- TODO: Add data binding -->
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="@id/election_date"
            tools:text="address"/>

        <Button
            android:id="@+id/button_save_election"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_button_margin"
            app:followElectionText="@{viewmodel.isElectionSaved()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/button_follow_election" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>