<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
        <variable
            name="clickListener"
            type="com.example.android.politicalpreparedness.representative.adapter.RepresentativeListener"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> clickListener.onClick(representative)}"
        android:padding="8dp">


        <ImageView
            android:id="@+id/representative_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_profile"
            app:representativePhoto="@{representative.official.photoUrl}"
            android:contentDescription="@string/representative_photo_description" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/representative_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintStart_toEndOf="@id/representative_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingStart="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:name="Name"
                android:text="@{representative.office.name}" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/ItemTitle"
                            android:text="@{representative.official.name}" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/ItemSubtitle"
                            android:text="@{representative.official.party}" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        >
                        <ImageView
                            android:id="@+id/facebook_icon"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:srcCompat="@drawable/ic_facebook"
                            android:layout_marginEnd="@dimen/default_button_margin"
                            android:contentDescription="@string/icon_facebook_description" />
                        <ImageView
                            android:id="@+id/twitter_icon"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:srcCompat="@drawable/ic_twitter"
                            android:layout_marginEnd="@dimen/default_button_margin"
                            android:contentDescription="@string/icon_twitter_description" />
                        <ImageView
                            android:id="@+id/www_icon"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            app:srcCompat="@drawable/ic_www"
                            android:contentDescription="@string/icon_www_description" />
                    </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
